Revert "Merge master into BEAM-13643"
This reverts commit bfb3f6c327b3574b29d140e4f12afba75ad7299f.