@@ -62,11 +62,7 @@ public class SerializableConfiguration implements Externalizable {
   public void readExternal(ObjectInput in) throws IOException, ClassNotFoundException {
     String className = in.readUTF();
     try {
-      conf =
-          Class.forName(className)
-              .asSubclass(Configuration.class)
-              .getDeclaredConstructor()
-              .newInstance();
+      conf = (Configuration) Class.forName(className).getDeclaredConstructor().newInstance();
       conf.readFields(in);
     } catch (InstantiationException
         | IllegalAccessException
